css/fake_table.css
.row {
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: row;
  flex-direction: row;

  /*
     Fixes chrome repaint issue when scrolling quickly in list-view.
     See http://stackoverflow.com/a/16474152/1765925
  */
  -webkit-transform: translate3d(0, 0, 0);

}

.cell {
  -webkit-flex: 1;
  flex: 1;

  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;

  line-height: 30px;
  height: 30px;
  opacity: 0.7;
  padding-left: 5px;

  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.row:hover .cell {
  opacity: 1;
}

/* ARROW FOR COLLAPSING AND EXPANDING */

.cell__arrow {
  cursor: pointer;
  display: block;
  float: left;
  width: 15px;
  height: 30px;
  position: relative;
}

.cell__arrow:before {
  position: absolute;
  right: 5px;
  top: 0px;
  font-size: 75%;
  color: #737373;
}

.row_arrow_collapsed .cell__arrow:before {
  content: "\25B6";
}

.row_arrow_expanded .cell__arrow:before {
    content: "\25BC";
}

.row_arrow_collapsed .cell_type_main, .row_arrow_expanded .cell_type_main {
  cursor: pointer;
}
 /* -------------------------------- */


.row-wrapper {
  width: 100%;
}

.row-wrapper:nth-of-type(2n) .cell {
  background: #f3f3f3;
}


.row.row_highlight .cell {
  opacity: 1;
}


.cell.cell_size_small {
  flex: none;
  width: 50px;
}

.cell.cell_size_medium {
  flex: none;
  width: 130px;
}

.cell.cell_size_large {
  flex: none;
  width: 250px;
}

.cell.cell_size_huge {
  flex: none;
  width: 450px;
}

.cell.cell_type_main {
  font-weight: bold;
}

.cell.cell_value_numeric {
  min-width: 65px;
  text-align: right;
  padding-right: 10px;
}

.cell.cell_type_header {
  color: inherit;
  padding: 0;
  padding-left: 5px;
  opacity: 1;


  font-weight: normal;
  border-left: 1px solid #b3b3b3;
  background: linear-gradient(to bottom, #ebebeb, #dadada);
}


.cell_clickable {
  cursor: pointer;

}

.row:hover .cell_clickable {
  text-decoration: underline;
}

.cell.spacer {
  border: none;
  width:0px;
  flex: none;
}

